--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav {text-align: center;}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background: grey;
+}
+figcaption {
+  text-align: center;
+}
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+footer {
+  text-align: center;
+  width: 100%;
+}
+#details > div  {
+  float: left;
+  background: red;
+  text-align: center;
+  width: 25%;
+}
 body {
   width: 100%;
   height: 100%;
